# rainbow

./: Cargo.toml  Cross.toml  Dockerfile  README.md
.github/: main.workflow
.github/workflows/: build.yml
src/: cli.yml  main.rs
